<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="ButtonText2">Button</string>
    <string name="CheckBoxText">Check this out!</string>
    <string name="SwitchText">Switch on / off</string>
    <string name="EditText">Type your answer here</string>
    <string name="TextViewText">Here are my widgets:</string>
    <string name="Lab3TextView1">Enter your email address:</string>
    <string name="Lab3TextView2">Enter your password:</string>
    <string name="Lab3EmailHint">Type email here:</string>
    <string name="Lab3LoginBtnText">Login</string>
    <string name="ProfileText">Your profile</string>
    <string name="NameText">Your name:</string>
    <string name="NameHintText">Enter your name</string>
    <string name="EmailTextViewText">Your email:</string>
    <string name="EmailHintText">Enter your email</string>
    <string name="PictureTextView">Your picture:</string>
    <string name="ImagePictureTextView">Click the button above to take a picture</string>
    <string name="GoToChatText">Go To Chat</string>
    <string name="SendText">Send</string>
    <string name="ReceiveText">Receive</string>
    <string name="ChatHint">Type here</string>
    <string name="GoToToolbar">Go to Toolbar page</string>
    <string name="GoToWeather">Go to Weather page</string>

</resources>