<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/ProfileTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ProfileText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/NameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ProfileTextView"/>
    <EditText
        android:id="@+id/NameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NameHintText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/NameTextView"
        />

    <TextView
        android:id="@+id/EmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EmailTextViewText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/NameEditText"/>
    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/EmailHintText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/EmailTextView"
        />
    <TextView
        android:id="@+id/PictureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PictureTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/EmailEditText"/>

    <ImageButton
        android:id="@+id/ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/picture_frame"
        android:layout_below="@id/PictureTextView"/>
    <TextView
        android:id="@+id/ImagePictureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ImagePictureTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ImageButton"/>

    <Button
        android:id="@+id/GoToChatBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/GoToChatText"
        android:layout_below="@id/ImagePictureTextView"/>
    <Button
        android:id="@+id/GoToToolbarPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/GoToToolbar"
        android:layout_below="@id/GoToChatBtn"/>
    <Button
        android:id="@+id/GoToWeatherPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/GoToWeather"
        android:layout_below="@id/GoToToolbarPage"/>



</RelativeLayout>