<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewText"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:text="@string/ButtonText2"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView2"
        android:layout_toLeftOf="@id/imageButton"/>
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"
        android:layout_below="@id/textView2"
        />
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckBoxText"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/imageButton"
        android:layout_toLeftOf="@id/imageButton"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:text="@string/SwitchText"
        android:layout_alignParentRight="true"
        android:layout_below="@id/imageButton"
        android:layout_toRightOf="@id/checkBox"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/EditText"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/checkBox"/>
</RelativeLayout>