<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/Lab3TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3TextView1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>


    <EditText
        android:id="@+id/Lab3editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/Lab3EmailHint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/Lab3TextView1"
        />

    <TextView
        android:id="@+id/Lab3textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3TextView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/Lab3editText2"/>

    <EditText
        android:id="@+id/Lab3editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/Lab3textView2"
        />
    <Button
        android:id="@+id/Lab3LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/Lab3editText3"
        android:text="@string/Lab3LoginBtnText"
        />

</RelativeLayout>